feat(style/, components/, package.json, build/): add LCD component, add hot module reload and css va

--- a/app/style/constants.scss
+++ b/app/style/constants.scss
@@ -1,4 +1,14 @@
-$light-black: #666;
-$lighter-black: #444;
+$dark-black: #000;
+$light-black: #444;
+$lighter-black: #666;
 $lightest-black: rgba(255, 255, 255, .65);
 $milk-color: #e1e1e1;
+$lcd-digit-off: rgba(0, 0, 0, 0.05);
+$lcd-digit-on: $light-black;
+$lcd-background: #888c60;
+$font-size: 16px;
+$padding: 15px;
+$line-height: 1.5;
+$logo: './../assets/images/logo.png';
+$logo-aspect-ratio: 2.9886363636363638;
+$logo-size: 0.36;
