--- a/app/style/constants.scss
+++ b/app/style/constants.scss
@@ -12,3 +12,6 @@ $line-height: 1.5;
 $logo: './../assets/images/logo.png';
 $logo-aspect-ratio: 2.9886363636363638;
 $logo-size: 0.36;
+$tablet-width: 768px;
+$laptop-width: 1024px;
+$L-laptop-width: 1448px;
