--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -21,13 +21,20 @@ body {
 
 html,
 body,
-#viewport,
-.app {
+#viewport {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .app {
+  height: 100%;
+  min-width: $tablet-width;
+  width: 80vw;
+  max-width: $L-laptop-width;
   padding: var(--padding);
   display: grid;
   grid-template-columns: 35% 1fr;
@@ -37,7 +44,7 @@ body,
   background-position: var(--padding) calc(var(--header-height) + var(--padding) * 2);
   background-repeat: no-repeat;
   background-size: var(--background-size);
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: $tablet-width) {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr 1fr;
     grid-template-areas: "header" "keypad" "pump";
@@ -53,5 +60,9 @@ body,
   }
   .pump {
     grid-area: pump;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
 }
