--- a/app/style/constants.scss
+++ b/app/style/constants.scss
@@ -6,12 +6,15 @@ $milk-color: #e1e1e1;
 $lcd-digit-off: rgba(0, 0, 0, 0.05);
 $lcd-digit-on: $light-black;
 $lcd-background: #888c60;
+$keypad-background: #afc13c;
 $font-size: 16px;
 $padding: 15px;
+$thin-border-width: 1px;
+$bold-border-width: 2px;
 $line-height: 1.5;
 $logo: './../assets/images/logo.png';
-$logo-aspect-ratio: 2.9886363636363638;
-$logo-size: 0.36;
+$logo-aspectRatio: 2.9886363636363638;
+$logo-size: 0.28;
 $tablet-width: 768px;
 $laptop-width: 1024px;
 $L-laptop-width: 1448px;
