--- a/app/components/price_panel/price_field/style.scss
+++ b/app/components/price_panel/price_field/style.scss
@@ -11,7 +11,7 @@
     margin-left: 5px;
     flex-grow: 1;
     background-color: $lightest-black;
-    border: 1px solid $light-black;
+    border: $thin-border-width solid $light-black;
     box-shadow: 0 0 .5rem rgba(0, 0, 0, .45);
     border-radius: 5px;
     overflow: hidden;
