--- a/app/components/nozzle_panel/nozzle/style.scss
+++ b/app/components/nozzle_panel/nozzle/style.scss
@@ -7,7 +7,7 @@
     display: block;
     width: 60%;
     margin-left: 20%;
-    transition: transform .5s ease-in;
+    transition: transform .2s ease-out;
     .nozzle-img {
       margin-top: $padding*2;
       width: 100%;
