fix(app): fix multiple send() call on sKeypad within a single transaction
* setup a single transaction when connect the App
* fix style of LCD

--- a/app/components/LCD/style.scss
+++ b/app/components/LCD/style.scss
@@ -2,6 +2,8 @@
 
 .LCD-container {
   margin-top: $padding;
+  width: 100%;
+
   .LCD-panel {
     background: $lcd-background;
     border: $bold-border-width solid $dark-black;
