style(app): add paddings to LCD

--- a/app/components/LCD/style.scss
+++ b/app/components/LCD/style.scss
@@ -9,6 +9,7 @@
     border: $bold-border-width solid $dark-black;
     border-radius: 10px;
     width: 100%;
+    padding: $padding/5 0;
   }
   .LCD-title {
     margin-top: $padding/3;
