--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -79,5 +79,9 @@ body,
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    .dollars,
+    .liters {
+      width: 60%;
+    }
   }
 }
