style(nozzle): add cursor style for nozzle

--- a/app/components/nozzle_panel/nozzle/style.scss
+++ b/app/components/nozzle_panel/nozzle/style.scss
@@ -15,8 +15,12 @@
     &:focus {
       outline: none;
     }
+    &:hover {
+      cursor: -webkit-grab;
+    }
   }
-  .lifed {
+  .nozzle-button.lifed {
     transform: translateY(-$padding*2);
+    cursor: -webkit-grabbing;
   }
 }
