refactor(nozzle): lifed->lifted
correct spelling issue

--- a/app/components/nozzle_panel/nozzle/style.scss
+++ b/app/components/nozzle_panel/nozzle/style.scss
@@ -19,7 +19,7 @@
       cursor: -webkit-grab;
     }
   }
-  .nozzle-button.lifed {
+  .nozzle-button.lifted {
     transform: translateY(-$padding*2);
     cursor: -webkit-grabbing;
   }
