--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -85,3 +85,87 @@ body,
     }
   }
 }
+
+.modal-portal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  background-color: rgba(#000, 0.6);
+  opacity: 0;
+  visibility: hidden;
+  backface-visibility: hidden;
+  transition: opacity $speed $easing, visibility $speed $easing;
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
+  .modal-overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 0 auto;
+    background-color: #fff;
+    width: $modal-width;
+    height: 0.618*$modal-width;
+    max-width: 0.75*$laptop-width;
+    min-height: 0.2*$tablet-width;
+    padding: $font-size;
+    border-radius: 3px;
+    opacity: 0;
+    overflow-y: auto;
+    visibility: hidden;
+    box-shadow: 0 2px 10px rgba(#000, 0.1);
+    backface-visibility: hidden;
+    transform: scale(1.2);
+    transition: all $speed $easing;
+    // close modal
+
+    .modal {
+      opacity: 0;
+      backface-visibility: hidden;
+      transition: opacity $speed $easing;
+      transition-delay: $delay;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      .close-modal {
+        position: absolute;
+        cursor: pointer;
+        top: 5px;
+        right: 15px;
+        opacity: 0;
+        backface-visibility: hidden;
+        transition: opacity $speed $easing, transform $speed $easing;
+        transition-delay: $delay;
+        .close-modal-svg {
+          width: 1.75*$font-size;
+          height: 1.75*$font-size;
+        }
+      }
+    }
+    // content
+
+    &.active {
+      visibility: visible;
+      opacity: 1;
+      transform: scale(1);
+
+      .modal {
+        opacity: 1;
+      }
+
+      .close-modal {
+        transform: translateY(10px);
+        opacity: 1;
+      }
+    }
+  }
+}
