--- a/app/components/price_panel/price_field/style.scss
+++ b/app/components/price_panel/price_field/style.scss
@@ -1,13 +1,15 @@
 @import "./../../../style/constants";
 
-.price_container {
+.price-container {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: $light-black;
-
-  .price_container__input {
+  & + & {
+    margin-left: 15px;
+  }
+  .price-container__input {
     margin-left: 5px;
     flex-grow: 1;
     background-color: $lightest-black;
@@ -31,8 +33,4 @@
       margin: 0;
     }
   }
-}
-
-.price_container + .price_container {
-  margin-left: 15px;
 }
