fix(index.scss): fix width default value
fix app alignment

--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -38,7 +38,7 @@ body,
 .app {
   min-height: 100%;
   min-width: $tablet-width;
-  width: 80vw;
+  width: 100%;
   max-width: $L-laptop-width;
   padding: var(--padding);
   display: grid;
