--- a/app/components/input_panel/keypad/style.scss
+++ b/app/components/input_panel/keypad/style.scss
@@ -22,12 +22,19 @@
     background: $keypad-background;
     border: $bold-border-width solid $dark-black;
     border-radius: 25%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     position: relative;
     min-width: 2*$line-height*$font-size;
+
+    .text {
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      justify-content: center;
+    }
     &:focus {
       outline: none;
     }
