--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -31,8 +31,31 @@ body,
   align-items: flex-start;
 }
 
-#viewport {
-  overflow: scroll;
+[id*="loading"] {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:after {
+    content: '';
+    animation: dots 4s ease-in-out 0s infinite;
+  }
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
 }
 
 .app {
