--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -2,12 +2,12 @@
 @import "./constants.scss";
 
 :root {
-  --font-size: $font-size;
-  --padding: $padding;
-  --line-height: $line-height;
-  --header-height: $line-height*$font-size;
-  --logo-size: $logo-size;
-  --logo-aspectRation: $logo-aspectRatio;
+  --font-size: #{$font-size};
+  --padding: #{$padding};
+  --line-height: #{$line-height};
+  --header-height: #{$line-height*$font-size};
+  --logo-size: #{$logo-size};
+  --logo-aspectRation: #{$logo-aspectRatio};
   --background-size: calc((100vw - (var(--padding) * 2)) * var(--logo-size));
 }
 
@@ -38,6 +38,7 @@ body,
   display: flex;
   align-items: center;
   justify-content: center;
+
   &:after {
     content: '';
     animation: dots 4s ease-in-out 0s infinite;
@@ -48,12 +49,15 @@ body,
   0% {
     content: "";
   }
+
   25% {
     content: ".";
   }
+
   50% {
     content: "..";
   }
+
   100% {
     content: "...";
   }
@@ -68,18 +72,20 @@ body,
   display: grid;
   grid-template-columns: 35% 1fr;
   grid-template-rows: auto 1fr;
-  grid-template-areas: "header header" "input pump";
+  grid-template-areas: "header header""input pump";
   background-image: url($logo);
   background-position: var(--padding) calc(var(--header-height) + var(--padding) * 2);
   background-repeat: no-repeat;
   background-size: var(--background-size);
+
   @media screen and (max-width: $tablet-width) {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr 1fr;
-    grid-template-areas: "header" "input" "pump";
+    grid-template-areas: "header""input""pump";
     background-image: url($logo);
     background-position: 100% 100%;
   }
+
   @media screen and (min-width: $L-laptop-width) {
     background-size: $L-laptop-width*$logo-size;
   }
@@ -87,22 +93,27 @@ body,
   .header {
     grid-area: header;
   }
+
   .input {
     padding: calc(var(--background-size) / var(--logo-aspectRation)) $padding 0;
     grid-area: input;
+
     @media screen and (max-width: $tablet-width) {
       padding: 0;
     }
+
     @media screen and (min-width: $L-laptop-width) {
       padding-top: $L-laptop-width/10;
     }
   }
+
   .pump {
     grid-area: pump;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+
     .dollars,
     .liters {
       width: 60%;
@@ -130,6 +141,7 @@ body,
     opacity: 1;
     visibility: visible;
   }
+
   .modal-overlay {
     display: flex;
     align-items: center;
@@ -160,6 +172,7 @@ body,
       width: 100%;
       height: 100%;
       outline: none;
+
       .close-modal {
         position: absolute;
         cursor: pointer;
@@ -169,12 +182,14 @@ body,
         backface-visibility: hidden;
         transition: opacity $speed $easing, transform $speed $easing;
         transition-delay: $delay;
+
         .close-modal-svg {
           width: 1.75*$font-size;
           height: 1.75*$font-size;
         }
       }
     }
+
     // content
 
     &.active {
